# FRACTAL_Big_Data

./: .gitignore  README.md  Standard_CLI_Sparker.py  Standard_CLI_Sparker_with_cross_validation.py  cli-aws.py  comments.md  explorer.ipynb  mybash.sh  mybash1.sh  mybash10.sh  mybash5.sh  plot.ipynb  pyproject.toml  read_data.ipynb  results.csv  sparker.py  sparker3.py
_data/: VAL-0976_6381-002085207.parquet
bashes/: mybash1.sh  mybash10.sh  mybash2.sh  mybash5.sh
files_name/: test_files.txt  val_files.txt
old/: sparker3.py  tryout.ipynb
single_operations/: count_classes.py  count_null_values.py  load_parquet_files.py  single_count_null_values.py  word_count.py
src/: s3handler.py  utils.py
